--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body
 <body>
 <div id="quote">
 <span id="quoter">
-"One good teacher in a lifetime may sometimes change a delinquent into a solid citizen"</span><span id="quoter2"> - Philip Wylie</span></div>
+"One good teacher in a lifetime may sometimes change a delinquent into a solid citizen"</span><span id="quoter2"> - VISHWA YADAV </span></div>
 
 
 
@@ -139,15 +139,7 @@ body
 
 <div id="img">
 <div id="cont">
-<br>To our beloved teachers,<br>
-<ul id="names">
-<li class="item">Sushma</li>
-<li>Srisha</li>
-<li>Manasa</li>
-<li>Poornima</li>
-<li>Nanjudswami</li>
-<li>Vanitha</li>
-</ul>
+<p>"Teachers are the guiding stars that light up the endless sky of knowledge, inspiring us to reach for the galaxies of our potential."</p>
 </div>
 <div id="thanks">Yours beloved,<br>3rd Sem, Cse 'A' </div>
 <style>
