--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body
 <body>
 <div id="quote">
 <span id="quoter">
-"One good teacher in a lifetime may sometimes change a delinquent into a solid citizen"</span><span id="quoter2"> - VISHWA YADAV </span></div>
+"One good teacher in a lifetime may sometimes change a delinquent into a solid citizen"</span><span id="quoter2"> - VISHWA</span></div>
 
 
 
