--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body
 
 <div id="img">
 <div id="cont">
-<p>"Teachers are the guiding stars that light up the endless sky of knowledge, inspiring us to reach for the galaxies of our potential."</p>
+<p>"Teachers are the guiding stars that light up the endless sky of knowledge,</p><p> inspiring us to reach for the galaxies of our potential."</p>
 </div>
 <div id="thanks">Yours beloved,<br>5th Sem, CSE </div>
 <style>
