--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ body
 {
 	
 	background-position: left;
+	background-size: 100%;
 	background-repeat: no-repeat;
     background-image:url(edu.jpg);
 	background-attachment:fixed;
