--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body
 	background-size: 100%;
 	background-repeat: no-repeat;
     background-image:url(edu.jpg);
-	background-attachment:fixed;
+	background-attachment:auto;
 	
 	
 }
