--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body
 <div id="cont">
 <p>"Teachers are the guiding stars that light up the endless sky of knowledge, inspiring us to reach for the galaxies of our potential."</p>
 </div>
-<div id="thanks">Yours beloved,<br>5th Sem, CSE </div>
+<div id="thanks">Yours beloved,<br> Studentes of EEE </div>
 <style>
 #names
 {
